--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "api-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "node server.js",
+    "seed": "node seed/data.js"  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,5 +15,6 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0"
-  }
+  }, 
+  "type": "module"
 }
