--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "seed": "node seed/data.js"  },
+    "seed": "node seed/data.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0"
-  }, 
+  },
   "type": "module"
 }
